(probably, maybe) fixed issue of overflowing bottom border

--- a/index.css
+++ b/index.css
@@ -387,6 +387,18 @@ p.two   {transform: translate(0,  42.5vh);}
 
 /* [ Element Formatting ] */
 
+  html {
+    height: -webkit-fill-available;
+    }
+
+  body {
+    min-height: 100vh; min-height: -webkit-fill-available;
+    }
+
+  viewport{
+    max-width: 100%; max-height: 100%;
+    }
+
 /* [ Basic Formatting ] */
 
   #content {
